changes to color of header

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Hello. I am a student at University of Michigan studying both Computer Science Engineering and User Experience Design. My hobbies include reading riveting fantasy novels, sketching ideas spawned from my imagination, and discussing the inner workings of the NBA. My goal is to someday work in an environment where I can build and design applications for new fields of technology (wearables, eye-wear, automotive). If you want to get in contact with me feel free to message me on LinkedIn, the contact section below, or at nnandigam23@gmail.com!</p>
+                    <p class="large text-muted">Hello. I am a student at University of Michigan studying both Computer Science Engineering and User Experience Design. My hobbies include reading riveting fantasy novels, sketching ideas spawned from my imagination, and discussing the inner workings of the NBA. My goal is to someday work in an environment where I can build and design applications for new fields of technology (wearables, eye-wear, automotive). If you want to get in contact with me feel free to message me on LinkedIn, the contact section below, or at nishal.nandigam@gmail.com!</p>
                 </div>
             </div>
             <div class="row">
