added github tutorial

--- a/portfolio.html
+++ b/portfolio.html
@@ -165,6 +165,8 @@
                         </li>
                         <li><a href="https://www.facebook.com/nnandigam23" target="_blank"><i class="fa fa-facebook"></i></a>
                         </li>
+                        <li><a href="https://github.com/nnandigam23" target="_blank"><i class="fa fa-github"></i></a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-md-4">
@@ -266,7 +268,7 @@
     </div>
 
 
-   
+
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
