--- a/blog.html
+++ b/blog.html
@@ -108,6 +108,20 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#galleryModal4" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/gallery/github_web_preview.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>GitHub Website Hosting</h4>
+                        <p class="text-muted">Tutorial</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#galleryModal2" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -165,6 +179,8 @@
                         </li>
                         <li><a href="https://www.facebook.com/nnandigam23" target="_blank"><i class="fa fa-facebook"></i></a>
                         </li>
+                        <li><a href="https://github.com/nnandigam23" target="_blank"><i class="fa fa-github"></i></a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-md-4">
@@ -208,7 +224,7 @@
             </div>
         </div>
     </div>
-    
+
 
     <!-- Gallery Modal 3 -->
     <div class="portfolio-modal modal fade" id="galleryModal2" tabindex="-1" role="dialog" aria-hidden="true">
@@ -233,7 +249,9 @@
 
                                 </object>
                             </div>
-                            <a href="docs/ExperienceProject.pdf" target="_blank"><p style="text-align:right">Open in separate tab <i class="fa fa-sign-out"></i></p></a>
+                            <a href="docs/ExperienceProject.pdf" target="_blank">
+                                <p style="text-align:right">Open in separate tab <i class="fa fa-sign-out"></i></p>
+                            </a>
                             <br>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
@@ -242,7 +260,7 @@
             </div>
         </div>
     </div>
-    
+
     <!-- Gallery Modal 3 -->
     <div class="portfolio-modal modal fade" id="galleryModal3" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
@@ -266,7 +284,9 @@
 
                                 </object>
                             </div>
-                            <a href="docs/TwitterCaseStudy.pdf" target="_blank"><p style="text-align:right">Open in separate tab <i class="fa fa-sign-out"></i></p></a>
+                            <a href="docs/TwitterCaseStudy.pdf" target="_blank">
+                                <p style="text-align:right">Open in separate tab <i class="fa fa-sign-out"></i></p>
+                            </a>
                             <br>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
@@ -276,7 +296,79 @@
         </div>
     </div>
 
-   
+    <!-- Gallery Modal 4 -->
+    <div class="portfolio-modal modal fade" id="galleryModal4" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Host a Website on GitHub</h2>
+                            <p class="item-intro text-muted">Beginners tutorial for GitHub </p>
+                            <div style="text-align:left">
+                                <p>This is going to be a really short tutorial for all you people who have your html, css, JavaScript, etc. ready, but need a simple method to host your awesome website. Use GitHub.</p>
+                                <h4>Pros to using GitHub</h4>
+                                <p><i class="fa fa-circle-o"></i> Quick to setup
+                                    <br>
+                                    <i class="fa fa-circle-o"></i> Free
+                                    <br>
+                                    <i class="fa fa-circle-o"></i> Easy to make changes
+                                    <br>
+                                    <i class="fa fa-circle-o"></i> Version Control
+                                    <br>
+                                    <i class="fa fa-circle-o"></i> Custom error pages
+                                </p>
+                                <h4>Cons to using GitHub</h4>
+                                <p><i class="fa fa-circle-o"></i> Daunting for beginners
+                                    <br>
+                                    <i class="fa fa-circle-o"></i> Only static pages (HTML, CSS, JS) - no PHP
+                                    <br>
+                                </p>
+                                <h4>Let's start.</h4>
+                                <img class="img-responsive img-centered" src="img/gallery/GithubTutorial/Github_sc.png" alt="">
+                                <p>First step is to get a <a href="https://github.com/">GitHub account</a>. Then you'll want to create a new repository and title it as such:</p>
+                                <img class="img-responsive img-centered" src="img/gallery/GithubTutorial/reposname.png" alt="">
+                                <p>Obviously you will fill in your own user name instead of 'nnandigam23'. You can initialize the repository with a README file, if you want. Click "Create repository".</p>
+                                <p>Now you should consider where you want your HTML, CSS, JS, etc. to be located. You will push these files from their location to Github. You can either have the files located locally on your computer, or store them on a cloud platform. For example, I keep all my web files on <a href="https://www.dropbox.com/home">Dropbox</a>. That way my website is not tied to my computer, instead it exists on the cloud. This could be useful if I were to lose my computer, or something happened to my hard drive. However, you are betting that Dropbox doesn't lose your files too. I recommend using a cloud-based storage application and keeping a recent copy of your work on a local machine as backup.</p>
+                                <h4>Using Git</h4>
+                                <p>Now we're going to use Git from the terminal to push your files to GitHub. Before that you'll want to copy the url of your repository to your clipboard. Other than copying the address from the top bar, there is a button under "<strong>HTTPS</strong> clone URL" on the right of the page that copies the url to your clipboard. So go ahead and launch your terminal (or powershell, if you're on Windows). eavigate to the folder where your web files are located. If you are new to the terminal, typing <code>ls</code> will display all the files and folders contained within the folder you are currently in. Typing <code>cd Folder</code> will get you to the folder specified (the folder has to be contained by the folder where you were previously). The command <code>cd ..</code> will get you up one folder. So once you're at the correct folder, enter the command:</p>
+                                <pre>git clone https://github.com/nnandigam23/nnandigam23.github.io</pre>
+                                <p>You'll want to insert that link that you copied where I have my url in the command. Now you should have a folder name 'username.github.io' where all your files are. In your Finder (or Windows Explorer), go ahead and move all those files into this new folder. Now in the terminal go to this new folder:</p>
+                                <pre>cd username.github.io</pre>
+                                <p>If you type in <code>ls</code> you should be able to see all the files you moved to this folder. So GitHub uses 'index.html' as your homepage, so you'll need to rename your main HTML page to 'index.html'. Once all your files are ready, enter:</p>
+                                <pre>git add *</pre>
+                                <p>This command readies all your changed files (in this case, new files) for deployment to GitHub. If you only want to add a single file, simply change the <code>git add *</code> to <code>git add file.name</code>. Next, you have to commit these changes. This is where you can type a message explaining the changes you have made during this particular upload. This is helpful when you are looking back on all the past versions of your code, and you want to know what changes were made:</p>
+                                <pre>git commit -m "blah blah blah"</pre>
+                                <p>You can enter your message in the between the quotation marks. So now we can push our code to the repository. To do this, type:</p>
+                                <pre>git push origin master</pre>
+                                <p>Once you enter this, you should be prompted for your username and password. Enter these in, and you should be good to go! Wait for the success message to display, and go check your repository to see your newly-added files.</p>
+                                <img class="img-responsive img-centered" src="img/gallery/GithubTutorial/repository.png" alt="">
+                                <p>The moment you have been waiting for: viewing your website. To do this simply type in 'username.github.io' into your search box. Behold, your website. That's the address for your website, so go ahead and share it to everyone.</p>
+                                <h4>Making Changes to your Website</h4>
+                                <p>This is what makes GitHub ideal for implementing fixes. Simply edit or files to your username.github.io folder. Then in the terminal, once you've navigated to the folder, type:</p>
+                                <pre>git add .</pre>
+                                <pre>git commit -m "your message"</pre>
+                                <pre>git push origin master</pre>
+                                <p>And that's it. Hope you enjoyed. Happy coding &nbsp;<i class="fa fa-thumbs-o-up"></i></p>
+
+                            </div>
+                            <br>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Blog</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
