--- a/portfolio.html
+++ b/portfolio.html
@@ -103,7 +103,7 @@
                         <img src="img/portfolio/GameOfThrones_preview.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Game Of Thrones - Ned Stark</h4>
+                        <h4>Game Of Thrones</h4>
                         <p class="text-muted">Drawing</p>
                     </div>
                 </div>
