--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Nishal Nandigam's portfolio">
     <meta name="author" content="Nishal Nandigam">
 
-    <title>Prototype</title>
+    <title>&lt;/nish&gt; | Portfolio</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -36,7 +36,7 @@
 <body id="page-top" class="index">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top" style="background: #222">
+    <nav class="navbar navbar-default navbar-fixed-top" style="background: #222; padding: 10px">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="index.html">Prototype</a>
+                <a class="navbar-brand page-scroll" href="index.html" style="font-family: montserrat"><strong>&lt;/nish&gt;</strong></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -135,7 +135,8 @@
                         <p class="text-muted">Presentation Poster</p>
                     </div>
                 </div>
-                <div class="row">
+            </div>
+            <div class="row">
                     <div class="col-lg-12 text-center">
                         <br>
                         <a href="index.html#portfolio">
@@ -143,7 +144,6 @@
                         </a>
                     </div>
                 </div>
-            </div>
         </div>
     </section>
 
@@ -153,7 +153,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Your Website 2014</span>
+                    <span class="copyright">Copyright &copy; NISH 2015</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
@@ -166,14 +166,6 @@
                         <li><a href="https://www.facebook.com/nnandigam23" target="_blank"><i class="fa fa-facebook"></i></a>
                         </li>
                         <li><a href="https://github.com/nnandigam23" target="_blank"><i class="fa fa-github"></i></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
-                        </li>
-                        <li><a href="#">Terms of Use</a>
                         </li>
                     </ul>
                 </div>
@@ -255,7 +247,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>Global Business Support Materials Website Enhancements</h2>
+                            <h2>Business Support Materials</h2>
                             <p class="item-intro text-muted">Poster for Reverse Career Fair</p>
                             <img class="img-responsive img-centered" src="img/portfolio/BSM_Poster.png" alt="">
                             <p>This is a poster made for the Amway Intern Reverse Career Fair. I discussed the project that I was working on: Global Business Support Materials Website Enhancements (BSM). This web application allows Amway Business Owners (ABO) to store their materials in a central database. This allows for easy access for each ABO and the Global BSM department at Amway. My role was the software tester, making sure the functionality of the website was intact and fit the requirements set by the Business Systems Analyst. I do this by writing test cases, executing them, and then reporting any bugs to the developer.</p>
