--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Nishal Nandigam's blog">
     <meta name="author" content="Nishal Nandigam">
 
-    <title>Prototype</title>
+    <title>&lt;/nish&gt; | Blog</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -36,7 +36,7 @@
 <body id="page-top" class="index">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top" style="background: #222">
+    <nav class="navbar navbar-default navbar-fixed-top" style="background: #222; padding: 10px">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="index.html">Prototype</a>
+                <a class="navbar-brand page-scroll" href="index.html" style="font-family: montserrat"><strong>&lt;/nish&gt;</strong></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -149,7 +149,8 @@
                         <p class="text-muted">Case Study</p>
                     </div>
                 </div>
-                <div class="row">
+            </div>
+            <div class="row">
                     <div class="col-lg-12 text-center">
                         <br>
                         <a href="index.html#portfolio">
@@ -157,7 +158,6 @@
                         </a>
                     </div>
                 </div>
-            </div>
         </div>
     </section>
 
@@ -167,7 +167,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Your Website 2014</span>
+                    <span class="copyright">Copyright &copy; NISH 2015</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
@@ -180,14 +180,6 @@
                         <li><a href="https://www.facebook.com/nnandigam23" target="_blank"><i class="fa fa-facebook"></i></a>
                         </li>
                         <li><a href="https://github.com/nnandigam23" target="_blank"><i class="fa fa-github"></i></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
-                        </li>
-                        <li><a href="#">Terms of Use</a>
                         </li>
                     </ul>
                 </div>
@@ -253,7 +245,7 @@
                                 <p style="text-align:right">Open in separate tab <i class="fa fa-sign-out"></i></p>
                             </a>
                             <br>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Blog</button>
                         </div>
                     </div>
                 </div>
@@ -288,7 +280,7 @@
                                 <p style="text-align:right">Open in separate tab <i class="fa fa-sign-out"></i></p>
                             </a>
                             <br>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Blog</button>
                         </div>
                     </div>
                 </div>
