--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Nishal Nandigam's stream of consciousness">
     <meta name="author" content="Nishal Nandigam">
 
-    <title>Prototype</title>
+    <title>&lt;/nish&gt;</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -47,7 +47,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Prototype</a>
+                <a class="navbar-brand page-scroll" href="#page-top" style="font-family: montserrat"><strong>&lt;/nish&gt;</strong></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -84,9 +84,9 @@
             <div class="row">
                 <div class="intro-text">
                 <div class="intro-lead-in" style="font-style: italic; margin-bottom: 15px">Nishal Nandigam's wandering thoughts</div>
-                <div class="intro-heading">Prototype</div>
+                <div class="intro-heading" style="text-transform:lowercase">&lt;/nish&gt;</div>
 
-                <a href="#team" class="page-scroll btn btn-xl">Explore <i class="fa fa-angle-double-down"></i></a>
+                <a href="#team" class="page-scroll btn btn-xl" style="padding:15px">Explore <i class="fa fa-angle-double-down"></i></a>
             </div>
             </div>
         </div>
@@ -230,7 +230,8 @@
                         <p class="text-muted">Presentation Poster</p>
                     </div>
                 </div>
-                <div class="row">
+            </div>
+            <div class="row">
                     <div class="col-lg-12 text-center">
                         <br>
                         <a href="portfolio.html">
@@ -238,7 +239,6 @@
                         </a>
                     </div>
                 </div>
-            </div>
         </div>
     </section>
     <!-------------------------------------------------------------->
@@ -638,7 +638,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Your Website 2014</span>
+                    <span class="copyright">Copyright &copy; NISH 2015</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
@@ -736,7 +736,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>Global Business Support Materials Website Enhancements</h2>
+                            <h2>Business Support Materials</h2>
                             <p class="item-intro text-muted">Poster for Reverse Career Fair</p>
                             <img class="img-responsive img-centered" src="img/portfolio/BSM_Poster.png" alt="">
                             <p>This is a poster made for the Amway Intern Reverse Career Fair. I discussed the project that I was working on: Global Business Support Materials Website Enhancements (BSM). This web application allows Amway Business Owners (ABO) to store their materials in a central database. This allows for easy access for each ABO and the Global BSM department at Amway. My role was the software tester, making sure the functionality of the website was intact and fit the requirements set by the Business Systems Analyst. I do this by writing test cases, executing them, and then reporting any bugs to the developer.</p>
@@ -805,7 +805,7 @@
                                 <p style="text-align:right">Open in separate tab <i class="fa fa-sign-out"></i></p>
                             </a>
                             <br>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Blog</button>
                         </div>
                     </div>
                 </div>
@@ -840,7 +840,7 @@
                                 <p style="text-align:right">Open in separate tab <i class="fa fa-sign-out"></i></p>
                             </a>
                             <br>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Blog</button>
                         </div>
                     </div>
                 </div>
