--- a/portfolio.html
+++ b/portfolio.html
@@ -169,6 +169,12 @@
                         </li>
                     </ul>
                 </div>
+                <div class="col-md-4">
+                    <ul class="list-inline quicklinks">
+                        <li><a href="#colophon" data-toggle="modal">Colophon</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </footer>
@@ -258,7 +264,32 @@
             </div>
         </div>
     </div>
+    
+     <!-- colophon -->
+    <div class="modal" id="colophon" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body" style="text-align:center">
+                            <!-- Project Details Go Here -->
+                            <h2>Colophon</h2>
+                            <p>This website was made using the <a href="http://startbootstrap.com/template-overviews/agency/">Agency theme</a>. The galley was made using open-source code from <a href="http://www.jssor.com/">Jssor Slider</a>. I highly suggest visiting these sites for themes and modules to embed into your code. If you believe that I have used your code/content and have not cited you, feel free to contact me and I will make the appropriate changes.</p>
+                            <br>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Colophon</button>
+                        </div>
+                    </div>
 
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
