--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
         <div class="container">
             <div class="row">
                 <div class="intro-text">
-                <div class="intro-lead-in" style="font-style: italic; margin-bottom: 15px">Nishal Nandigam's wandering thoughts</div>
-                <div class="intro-heading" style="text-transform:lowercase">&lt;/nish&gt;</div>
+                    <div class="intro-lead-in" style="font-style: italic; margin-bottom: 15px">Nishal Nandigam's wandering thoughts</div>
+                    <div class="intro-heading" style="text-transform:lowercase">&lt;/nish&gt;</div>
 
-                <a href="#team" class="page-scroll btn btn-xl" style="padding:15px">Explore <i class="fa fa-angle-double-down"></i></a>
-            </div>
+                    <a href="#team" class="page-scroll btn btn-xl" style="padding:15px">Explore <i class="fa fa-angle-double-down"></i></a>
+                </div>
             </div>
         </div>
     </header>
@@ -232,13 +232,13 @@
                 </div>
             </div>
             <div class="row">
-                    <div class="col-lg-12 text-center">
-                        <br>
-                        <a href="portfolio.html">
-                            <button type="submit" class="btn btn-xl">See More <i class="fa fa-chevron-circle-right"></i></button>
-                        </a>
-                    </div>
+                <div class="col-lg-12 text-center">
+                    <br>
+                    <a href="portfolio.html">
+                        <button type="submit" class="btn btn-xl">See More <i class="fa fa-chevron-circle-right"></i></button>
+                    </a>
                 </div>
+            </div>
         </div>
     </section>
     <!-------------------------------------------------------------->
@@ -593,7 +593,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Me</h2>
-                    <h3 class="section-subheading text-muted">Thoughts? Questions? Suggestions?</h3>
+                    <h3 class="section-subheading text-muted" style="color:#1d99d4">Thoughts? Questions? Suggestions?</h3>
                 </div>
             </div>
             <div class="row">
@@ -794,16 +794,16 @@
                             <!-- Project Details Go Here -->
                             <h2>Experience Project</h2>
                             <p class="item-intro text-muted">My experiences with Experience Project</p>
-                            <div id="pdf">
-                                <object data="/docs/ExperienceProject.pdf#toolbar=1&amp;navpanes=0&amp;scrollbar=1&amp;page=1&amp;view=FitH" type="application/pdf" width="100%" height="100%">
-
-                                    <p>It appears you don't have a PDF plugin for this browser. No biggie... you can <a href="/docs/ExperienceProject.pdf">click here to download the PDF file.</a></p>
+                            <a href="docs/ExperienceProject.pdf" target="_blank">
+                                <button type="submit" class="btn btn-primary">Open in separate tab <i class="fa fa-sign-out"></i></button>
+                            </a>
+                            <br>
+                            <br>
+                            <div class="desktop-div" id="pdf">
+                                <object data="/docs/ExperienceProject.pdf" type="application/pdf" width="100%" height="100%">
 
                                 </object>
                             </div>
-                            <a href="docs/ExperienceProject.pdf" target="_blank">
-                                <p style="text-align:right">Open in separate tab <i class="fa fa-sign-out"></i></p>
-                            </a>
                             <br>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Blog</button>
                         </div>
@@ -829,16 +829,16 @@
                             <!-- Project Details Go Here -->
                             <h2>Twitter: The Shared Experience</h2>
                             <p class="item-intro text-muted">A Case Study on Twitter</p>
-                            <div id="pdf">
-                                <object data="/docs/TwitterCaseStudy.pdf#toolbar=1&amp;navpanes=0&amp;scrollbar=1&amp;page=1&amp;view=FitH" type="application/pdf" width="100%" height="100%">
-
-                                    <p>It appears you don't have a PDF plugin for this browser. No biggie... you can <a href="/docs/TwitterCaseStudy.pdf">click here to download the PDF file.</a></p>
+                            <a href="docs/TwitterCaseStudy.pdf" target="_blank">
+                                <button type="submit" class="btn btn-primary">Open in separate tab <i class="fa fa-sign-out"></i></button>
+                            </a>
+                            <br>
+                            <br>
+                            <div class="desktop-div" id="pdf">
+                                <object data="/docs/TwitterCaseStudy.pdf" type="application/pdf" width="100%" height="100%">
 
                                 </object>
                             </div>
-                            <a href="docs/TwitterCaseStudy.pdf" target="_blank">
-                                <p style="text-align:right">Open in separate tab <i class="fa fa-sign-out"></i></p>
-                            </a>
                             <br>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Blog</button>
                         </div>
