changed section ids

--- a/blog.html
+++ b/blog.html
@@ -56,16 +56,16 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="index.html#team">Me</a>
+                        <a class="page-scroll" href="index.html#about">Me</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="index.html#services">Passions</a>
+                        <a class="page-scroll" href="index.html#passions">Passions</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="index.html#portfolio">Portfolio</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="index.html#about">Blog</a>
+                        <a class="page-scroll" href="index.html#blog">Blog</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="index.html#contact">Contact</a>
@@ -153,8 +153,8 @@
             <div class="row">
                     <div class="col-lg-12 text-center">
                         <br>
-                        <a href="index.html#portfolio">
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-remove"></i> Close Portfolio</button>
+                        <a href="index.html#blog">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-remove"></i> Close Blog</button>
                         </a>
                     </div>
                 </div>
