--- a/portfolio.html
+++ b/portfolio.html
@@ -56,16 +56,16 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="index.html#team">Me</a>
+                        <a class="page-scroll" href="index.html#about">Me</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="index.html#services">Passions</a>
+                        <a class="page-scroll" href="index.html#passions">Passions</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="index.html#portfolio">Portfolio</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="index.html#about">Blog</a>
+                        <a class="page-scroll" href="index.html#blog">Blog</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="index.html#contact">Contact</a>
