--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Me</a>
+                        <a class="page-scroll" href="#about">Me</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Passions</a>
+                        <a class="page-scroll" href="#passions">Passions</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Blog</a>
+                        <a class="page-scroll" href="#blog">Blog</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -86,7 +86,7 @@
                     <div class="intro-lead-in" style="font-style: italic; margin-bottom: 15px">Nishal Nandigam's wandering thoughts</div>
                     <div class="intro-heading" style="text-transform:lowercase">&lt;/nish&gt;</div>
 
-                    <a href="#team" class="page-scroll btn btn-xl" style="padding:15px">Explore <i class="fa fa-angle-double-down"></i></a>
+                    <a href="#about" class="page-scroll btn btn-xl" style="padding:15px">Explore <i class="fa fa-angle-double-down"></i></a>
                 </div>
             </div>
         </div>
@@ -94,7 +94,7 @@
 
 
     <!-- Team Section -->
-    <section id="team" class="bg-light-gray">
+    <section id="about" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -141,7 +141,7 @@
         </div>
     </section>
     <!-- Passions Section -->
-    <section id="services">
+    <section id="passions">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -243,7 +243,7 @@
     </section>
     <!-------------------------------------------------------------->
     <!-- Blog Section -->
-    <section id="about">
+    <section id="blog">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
