--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
     <!--icon-->
     <link rel="icon" href="img/favicon.png">
+    <link rel="img_src" href="img/webpreview.png" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -228,6 +229,20 @@
                     <div class="portfolio-caption">
                         <h4>Amway BSM Project</h4>
                         <p class="text-muted">Presentation Poster</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/OCD_preview.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Amway OCD Redesign</h4>
+                        <p class="text-muted">IT Intern Project</p>
                     </div>
                 </div>
             </div>
@@ -740,6 +755,35 @@
                             <p class="item-intro text-muted">Poster for Reverse Career Fair</p>
                             <img class="img-responsive img-centered" src="img/portfolio/BSM_Poster.png" alt="">
                             <p>This is a poster made for the Amway Intern Reverse Career Fair. I discussed the project that I was working on: Global Business Support Materials Website Enhancements (BSM). This web application allows Amway Business Owners (ABO) to store their materials in a central database. This allows for easy access for each ABO and the Global BSM department at Amway. My role was the software tester, making sure the functionality of the website was intact and fit the requirements set by the Business Systems Analyst. I do this by writing test cases, executing them, and then reporting any bugs to the developer.</p>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Portfolio Modal 4 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Amway Online Corporate Directory Redesign</h2>
+                            <p class="item-intro text-muted">Intern Project</p>
+                            <img class="img-responsive img-centered" src="img/portfolio/OCD.png" alt="">
+                            <p>This was a project for all the IT interns at Amway. Our project was to redesign the current Online Corporate Directory (OCD). To do this we split into 3 teams: Interview team, Design team, and Development team. I was a member of both the Design and Development team. We worked using Agile processes in which we had many iterations of our design and prototype.</p>
+                            <p>As a member of the Design team, I took the information gathered through the interviews and surveys conducted by the Interview team, and made an initial mockup of the new website. The old OCD was notorious for having too many field and small text, so we trimmed down the intitial fields to the most commonly used. We also created an 'advanced search' button to hide all the rarely used search fields. We changed the overall look of the OCD to make it more similar to the current Amway Intranet. We changed the size of the fields and buttons to make it easier to use. The emphasis on the color red changed to shades of blue. We also added a picture of the Amway Grand Plaza in downtown Grand Rapids to add to the Amway spirit and culture. I used Adobe Photoshop to make the many iterations of the mock-up.</p>
+                            <p>As a member of the Development team, we implemented the design of the mock-up. My role was as a front-end developer. I mainly worked with HTML, CSS, and Bootstrap 3. Bootstrap helped to make our website responsive and mobile friendly. I would recieve basic html from the back-end developer and basically make it look pretty. Since we had only one virtual machine to run our code, we had to work in sessions, using lean techniques like partner programming.</p>
+                            <p>Overall, I learned a lot about the Agile design process and about web development. Our prototype is currently being moved into production (which I'm really proud of) and will be taken over by Amway employees after the interns leave this summer.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
