--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
 
 <head>
 
@@ -8,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Nishal Nandigam's stream of consciousness">
     <meta name="author" content="Nishal Nandigam">
-
+    <meta property="og:image" content="img/icon-facebook.png" />
     <title>&lt;/nish&gt;</title>
 
     <!-- Bootstrap Core CSS -->
@@ -25,7 +26,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
     <!--icon-->
     <link rel="icon" href="img/favicon.png">
-    <link rel="img_src" href="img/webpreview.png" />
+    <link rel="img_src" href="img/icon-facebook.png" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
