--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Nishal Nandigam's stream of consciousness">
     <meta name="author" content="Nishal Nandigam">
-    <meta property="og:image" content="img/icon-facebook.png" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/nnandigam23/nnandigam23.github.io/master/img/icon-facebook.png" />
     <title>&lt;/nish&gt;</title>
 
     <!-- Bootstrap Core CSS -->
@@ -26,7 +26,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
     <!--icon-->
     <link rel="icon" href="img/favicon.png">
-    <link rel="img_src" href="img/icon-facebook.png" />
+    <link rel="img_src" href="https://raw.githubusercontent.com/nnandigam23/nnandigam23.github.io/master/img/icon-facebook.png" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
