--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" name="phone" required data-validation-required-message="Please enter your phone number.">
+                                    <input type="tel" class="form-control" placeholder="Your Phone" id="phone" name="phone">
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
